# startup_closure_prediction

./: README.md  pyproject.toml  startup_close_prediction.ipynb
reports/: report_before_test_data_processing.html  report_before_train_data_processing.html
